# xlscala

./: Cargo.toml
xlscala_addin/: Cargo.toml
xlscala_addin/macros/: Cargo.toml
xlscala_addin/macros/src/: lib.rs
xlscala_addin/src/: addin.rs  constants.rs  lib.rs  singleton.rs
xlscala_addin/src/functions/: infos.rs  mod.rs  tools.rs
xlscala_addin/src/functions/arguments/: mod.rs
xlscala_addin/src/semantics/: builder.rs  cause.rs  coalesce.rs  cons.rs  convert.rs  empty.rs  ergo.rs  failed.rs  like.rs  mod.rs  monoid.rs  mute.rs  na.rs  none.rs  successful.rs  validated.rs  with.rs
xlscala_addin/src/xl/: caller.rs  defines.rs  error.rs  mod.rs  range.rs  scalar.rs  tracer.rs  trigger.rs  xlargument.rs  xlcommand.rs  xlfucntioncontext.rs  xlfunction.rs  xlfunctiontrace.rs  xlobjecthandler.rs  xlregistry.rs  xlsession.rs
xlscala_addin/src/xl/eventhandlers/: mod.rs  on_recalc.rs
xlscala_addin/src/xl/xlcommands/: alert.rs  mod.rs  warning.rs
xlscala_addin/src/xlsdk/: entrypoint.rs  error.rs  mod.rs  variant.rs  xlarg.rs  xlauto.rs  xlcall.rs  xlfn.rs  xlsdk.rs
